[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = "1"
clap = { version = "4.4", features = [ "derive" ] }
closure = "0.3"
config = "0.13"
console = "0.15"
itertools = "0.12"
lazy_static = "1"
oneshot = "0.1"
regex = "1"
reqwest = { version = "0.11", features = [ "blocking", "cookies" ]}
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = [ "openblas-system"] }
num = "0.4"
prettytable = "0.10"
priority-queue = "1.3"
scopeguard = "1.2"
smallvec = "1.11"
tap = "1"
