[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib/lib.rs"

[[bin]]
name = "aoc"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = "1"
clap = { version = "4.4", features = [ "derive" ] }
cli-table = "0.4"
closure = "0.3"
config = "0.14"
console = "0.15"
hashbrown = "0.15"
itertools = "0.13"
lazy_static = "1"
oneshot = "0.1"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", features = [ "blocking", "cookies" ]}
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = [ "openblas-system"] }
num = "0.4"
scopeguard = "1.2"
smallvec = "1.11"
